@@ -1,5 +1,11 @@
 2004-05-27  Davyd Madeley  <davyd@ucc.asn.au>
 
+	* battstat_applet.c:
+	- Ensure battery warning dialogs are line wrapped.
+	- Add time remaining to low battery warning dialog.
+
+2004-05-27  Davyd Madeley  <davyd@ucc.asn.au>
+
 	* battstat_applet.c: Remove all uses of snprintf and replace them with
 	g_strdup and g_strdup_printf. Closes #143210.
 
